--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,8 +58,5 @@ jobs:
       uses: pnpm/action-setup@v2.0.1
       with:
         version: 6.9.1
+        run_install: true
 
-
-
-    - name: install app dependencies
-      run: pnpm install
