--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,8 +57,6 @@ jobs:
     - name: install pnpm
       uses: pnpm/action-setup@v2.0.1
       with:
-        version: 6.0.2
-        run_install: |
-          - recursive: true
-            args: [--frozen-lockfile, --strict-peer-dependencies]
+        version: 6.9.1
+        run_install: true
 
