--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ jobs:
       fail-fast: false
       matrix:
        # platform: [macos-latest, ubuntu-latest, windows-latest]
-        platform: [windows-latest, windows-2016]
-        node-version: [12,14,16]
+        platform: [macos-latest, ubuntu-latest, windows-latest]
+        node-version: [14]
 
     runs-on: ${{ matrix.platform }}
     steps:
