--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,6 @@ jobs:
 
     runs-on: ${{ matrix.platform }}
     steps:
-    - name: Get pnpm cache directory
-      if: matrix.platform == 'windows-latest'
-      id: pnpm-cache-dir-path
-      run: echo "::set-output name=dir::${HOME}\.pnpm-store\"
 
     - uses: actions/checkout@v2
 
@@ -30,7 +26,7 @@ jobs:
       env:
         cache-name: cache-pnpm-modules
       with:
-        path: ${{ steps.pnpm-cache-dir-path.outputs.dir }}
+        path: D:\.pnpm-store\
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-
